HTML added footer

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <title>WeatherGuide</title>
   </head>
   <body>
+    <footer>
+      <a href="http://https://github.com/FancySun88/WeatherGuide-app"
+        >Open-source code</a
+      >
+      by Iryna Zhelezniak, 2022
+    </footer>
     <script src="src/index.js"></script>
   </body>
 </html>
