--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <footer>
-      <a href="http://https://github.com/FancySun88/WeatherGuide-app"
+      <a href="https://github.com/FancySun88/WeatherGuide-app"
         >Open-source code</a
       >
       by Iryna Zhelezniak, 2022
