--- a/index.html
+++ b/index.html
@@ -4,11 +4,56 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="src//styles.css" />
 
     <title>WeatherGuide</title>
   </head>
   <body>
+    <div class="container">
+      <div class="Fav-cities">
+        <ul>
+          <li>Kyiv</li>
+          <li>Amsterdam</li>
+          <li>Valletta</li>
+          <li>Poznan</li>
+        </ul>
+      </div>
+      <div>
+        <div>
+          <h1>Kyiv</h1>
+          <ul>
+            <li>Friday 05:00</li>
+            <li>June 29 2022</li>
+            <li>Clear</li>
+          </ul>
+        </div>
+       </div>
+        <div class="row">
+            <div class="col-6">
+              <div class="clearfix weather-temperature">
+                <img src="" alt="Clear" id="icon" class="float-left" />
+                <div class="float-left">
+                  <strong id="temperature"></strong
+                  ><span class="units"> °C</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span> m/h</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+    </div>
     <footer>
       <a href="https://github.com/FancySun88/WeatherGuide-app"
         >Open-source code</a
