--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
   </head>
   <body>
     <div class="container">
+        <div class="Apps-container">
+            <div class="Weather-app">
       <div class="Fav-cities">
-        <ul>
+        <ul class="Default-cities">
           <li>Kyiv</li>
           <li>Amsterdam</li>
           <li>Valletta</li>
@@ -26,7 +28,7 @@
         </ul>
       </div>
       <div>
-        <div>
+        <div class="Users-data-weather">
           <h1>Kyiv</h1>
           <ul>
             <li>Friday 05:00</li>
@@ -53,13 +55,16 @@
             </div>
           </div>
         </div>
-    </div>
-    <footer>
+          <small>
       <a href="https://github.com/FancySun88/WeatherGuide-app"
         >Open-source code</a
       >
       by Iryna Zhelezniak, 2022
-    </footer>
+          </small>
+          </div>
+    </div>
+    </div>
+  
     <script src="src/index.js"></script>
   </body>
 </html>
