--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,29 +16,29 @@
   </head>
   <body>
     <div class="container">
-        <div class="Apps-container">
-            <div class="Weather-app">
-      <div class="Fav-cities">
-        <ul class="Default-cities">
-          <li>Kyiv</li>
-          <li>Amsterdam</li>
-          <li>Valletta</li>
-          <li>Poznan</li>
-        </ul>
-      </div>
-      <div>
-        <div class="Users-data-weather">
-          <h1>Kyiv</h1>
-          <ul>
-            <li>Friday 05:00</li>
-            <li>June 29 2022</li>
-            <li>Clear</li>
-          </ul>
-        </div>
-       </div>
-        <div class="row">
+      <div class="Apps-container">
+        <div class="Weather-app">
+          <div class="Fav-cities">
+            <ul class="Default-cities">
+              <li>Kyiv</li>
+              <li>Amsterdam</li>
+              <li>Valletta</li>
+              <li>Poznan</li>
+            </ul>
+          </div>
+          <div>
+            <div class="Users-data-weather">
+              <h1>Kyiv</h1>
+              <ul>
+                <li>Friday 05:00</li>
+                <li>June 29 2022</li>
+                <li>Clear</li>
+              </ul>
+            </div>
+          </div>
+          <div class="row">
             <div class="col-6">
-              <div class="clearfix weather-temperature">
+              <div class="clearfix Weather-temperature">
                 <img src="" alt="Clear" id="icon" class="float-left" />
                 <div class="float-left">
                   <strong id="temperature"></strong
@@ -48,23 +47,22 @@
               </div>
             </div>
             <div class="col-6">
-              <ul>
+              <ul class="Weather-description">
                 <li>Humidity: <span id="humidity"></span>%</li>
                 <li>Wind: <span id="wind"></span> m/h</li>
               </ul>
             </div>
           </div>
         </div>
-          <small>
-      <a href="https://github.com/FancySun88/WeatherGuide-app"
-        >Open-source code</a
-      >
-      by Iryna Zhelezniak, 2022
-          </small>
-          </div>
+      </div>
+      <small>
+        <a href="https://github.com/FancySun88/WeatherGuide-app"
+          >Open-source code</a
+        >
+        by Iryna Zhelezniak, 2022
+      </small>
     </div>
-    </div>
-  
+
     <script src="src/index.js"></script>
   </body>
 </html>
