--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                   <span id="date"></span>
                   <span id="year"></span>
                 </li>
-                <li id="description"></li>
+                <li class="Weather-description" id="description"></li>
               </ul>
             </div>
           </div>
