HTML Added the search-form

--- a/index.html
+++ b/index.html
@@ -26,6 +26,26 @@
               <li>Poznan</li>
             </ul>
           </div>
+          <form class="form-field" id="search-form">
+            <div class="row">
+              <div class="col-9">
+                <input
+                  type="search"
+                  placeholder="Please, type a city..."
+                  class="form-control input-field"
+                  id="users-input"
+                  autocomplete="off"
+                />
+              </div>
+              <div class="col-3">
+                <input
+                  type="submit"
+                  value="Get a forecast"
+                  class="btn btn-primary bottom-submit"
+                />
+              </div>
+            </div>
+          </form>
           <div>
             <div class="Users-data-weather">
               <h1 id="city"></h1>
