JS Added weather search for defaul cities, current position

--- a/index.html
+++ b/index.html
@@ -20,10 +20,31 @@
         <div class="Weather-app">
           <div class="Fav-cities">
             <ul class="Default-cities">
-              <li>Kyiv</li>
-              <li>Amsterdam</li>
-              <li>Valletta</li>
-              <li>Poznan</li>
+              <li>
+                <button class="default-cities-btn" id="defaultCityOne">
+                  Kyiv
+                </button>
+              </li>
+              <li>
+                <button class="default-cities-btn" id="defaultCityTwo">
+                  Amsterdam
+                </button>
+              </li>
+              <li>
+                <button class="default-cities-btn" id="defaultCityThree">
+                  Valletta
+                </button>
+              </li>
+              <li>
+                <button class="default-cities-btn" id="defaultCityFour">
+                  Poznan
+                </button>
+              </li>
+              <li>
+                <button class="default-cities-btn" id="button-geoposition">
+                  Current city
+                </button>
+              </li>
             </ul>
           </div>
           <form class="form-field" id="search-form">
