HTML Added weather forecast

--- a/index.html
+++ b/index.html
@@ -104,6 +104,19 @@
               </ul>
             </div>
           </div>
+          <div class="Weather-forecast">
+            <div class="row">
+              <div class="col-2">
+                <div class="Forecast-day">Monday</div>
+                <div class="Forecast-description"></div>
+                <img src="#" alt="" class="forecast-img" />
+                <div class="Weather-forecast-temperature">
+                  <span class="Forecast-temperature-max">18°</span>
+                  <span class="Forecast-temperature-min">10°</span>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <small>
