--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="col-6">
               <ul class="Weather-description">
                 <li>Humidity: <span id="humidity"></span>%</li>
-                <li>Wind: <span id="wind"></span> km/h</li>
+                <li>Wind: <span id="wind"></span> m/s</li>
               </ul>
             </div>
           </div>
