--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
               </ul>
             </div>
           </div>
-          <div class="Weather-forecast">
-            <div class="row">
+          <div class="Weather-forecast" id="weather-forecast">
+            <!-- <div class="row">
               <div class="col-2">
                 <div class="Forecast-day">Monday</div>
                 <div class="Forecast-description"></div>
@@ -115,7 +115,7 @@
                   <span class="Forecast-temperature-min">10°</span>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
